Layout fix
Cutoff adresses for shops in client-view

--- a/src/app/client-view/client-view.component.scss
+++ b/src/app/client-view/client-view.component.scss
@@ -6,7 +6,7 @@
 } 
 
 #extLink {
-  margin-left: 7em;
+    padding: 5px;
 } 
 
 mat-sidenav{
